<?xml version="1.0"?>
<package format="2">
  <name>laser_pattern_detector_msgs</name>
  <version>1.0.4</version>
  <description>The laser_pattern_detector_msgs package</description>
  <maintainer email="victor.lopez@pal-robotics.com">victor</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
